Tue Dec 02 19:02:35 UTC 2008  Trevor Fields  <fields_t@ociweb.com>

        * orbsvcs/tests/InterfaceRepo/IFR_Self_Reursive_IDL_Test/client.cpp:
        * orbsvcs/tests/InterfaceRepo/IFR_Self_Reursive_IDL_Test/server.cpp:
          Changed older main to ACE_TMAIN.

Mon Dec 01 19:47:02 UTC 2008  Trevor Fields  <fields_t@ociweb.com>

        * tao/AnyTypeCode/TypeCode_CDR_Extraction.cpp:
          Fixed reference counting of extracted type codes.  Direct
          references were being taken instead of duplicate().

        * orbsvcs/tests/InterfaceRepo/IFR_Self_Reursive_IDL_Test:
        * orbsvcs/tests/InterfaceRepo/IFR_Self_Reursive_IDL_Test/client.cpp:
        * orbsvcs/tests/InterfaceRepo/IFR_Self_Reursive_IDL_Test/GoodDay.cpp:
        * orbsvcs/tests/InterfaceRepo/IFR_Self_Reursive_IDL_Test/GoodDay.h:
        * orbsvcs/tests/InterfaceRepo/IFR_Self_Reursive_IDL_Test/IFR_Self_Reursive_IDL.mpc:
        * orbsvcs/tests/InterfaceRepo/IFR_Self_Reursive_IDL_Test/Makefile.am:
        * orbsvcs/tests/InterfaceRepo/IFR_Self_Reursive_IDL_Test/README:
        * orbsvcs/tests/InterfaceRepo/IFR_Self_Reursive_IDL_Test/run_test.pl:
        * orbsvcs/tests/InterfaceRepo/IFR_Self_Reursive_IDL_Test/server.cpp:
        * orbsvcs/tests/InterfaceRepo/IFR_Self_Reursive_IDL_Test/Test.idl:
          Added test.

Mon Dec  1 10:44:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Bug_3418_Regression/*:
          Added new regression test for bug 3418, this has not been
          fixed yet. Thanks to Vladimir Zykov
          <vladimir dot zykov at prismtech dot com> for creating this
          test

Sat Nov 29 08:00:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Explicit_Event_Loop/run_test.pl
        * tests/Objref_Sequence_Test/run_test.pl
        * tests/Objref_Sequence_Test/server.cpp
        * tests/Portable_Interceptors/AdvSlotDblCpy/run_test.pl
        * tests/Server_Port_Zero/run_test.pl